--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -587,4 +587,18 @@
         }
         
     }
+    .link-action-bot-empty{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        height: calc(100vh - 108px);
+        .title{
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 20px;
+            color: #3C4043;
+            margin: 15px 0;
+        }
+    }
 }   
