--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -217,7 +217,7 @@
             <img src="assets/icons/actions/no-link-bot-action.svg">
           </div>
           <div class="title">Please subscribe to the Kore.ai bots platform to link a bot here</div>
-          <button class="kr-sg-button-primary btn_lg"><img src="assets/icons/actions/external.svg" class="pr-2">Bots Platform </button>
+          <button class="kr-sg-button-primary btn_lg" (click)="navigateToBotBuilder()"><img src="assets/icons/actions/external.svg" class="pr-2">Bots Platform </button>
       </div>
     </div>
   </perfect-scrollbar>
