--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -300,7 +300,7 @@
                     <span class="status-title"> {{"contentSource.in_progress" | translate}}</span>
                   </div>
                   <div class="pages-count text-right" *ngIf="statusObj[source.recentStatus]?.name == 'Success'">
-                      <span class="count">{{source.numPages}}</span>{{"contentSource.pages" | translate}}
+                      <span class="count">{{source.numPages || '0'}}</span>{{"contentSource.pages" | translate}}
                   </div>
                   <div class="status text-right" *ngIf="statusObj[source.recentStatus]?.name == 'Failed'">
                     <span class="img-block"><img src="assets/icons/content/failed-status.svg"></span>
