traits header ui issue fixed

--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -31,7 +31,7 @@
                         <label for="selectAllTraits" class="checkbox-custom-label"></label>
                     </div>
                     <div class="kr-sg-checkbox d-none partial-select-checkbox mb-0" *ngIf="selcectionObj?.selectedItems?.length != traits?.traitGroups?.length">
-                        <img (click)="selectAllFromPartial()" src="assets/icons/resultranking/selected-checkbox.svg" class="search-icon pr-2">
+                        <img (click)="selectAllFromPartial()" src="assets/icons/resultranking/selected-checkbox.svg" class="search-icon partial-select-img">
                     </div>
                     <div class="all-checked d-none">
                         <img src="assets/icons/resultranking/selected-checkbox.svg">
