--- a/findly-builder/src/app/components/business-rules/business-rules.component.scss
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.scss
@@ -266,8 +266,9 @@
                     overflow: hidden;
                     text-overflow: ellipsis;
                     white-space: nowrap;
-                    max-width: 190px;
+                    max-width: 130px;
                     margin: 0 5px 5px 0 !important;
+                    height: 18px;
                     .small-text {
                         color: #BDC1C6;
                     }
