business-rules overlapping ui code chagnes

--- a/findly-builder/src/app/components/business-rules/business-rules.component.scss
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.scss
@@ -253,6 +253,9 @@
                         line-height: 19px;
                     }
                 }
+                .tags-input.contextCategory{
+                    max-width: 180px !important;
+                }
                 .tags-input {
                     border: 1px solid #BDC1C6;
                     box-sizing: border-box;
