--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -127,9 +127,9 @@
                     <!-- <br *ngIf="ruleIndex > 0"> -->
                     <div class="d-flex align-items-center flex-wrap">
                         <span class="divider" *ngIf="ruleIndex > 0">{{"and_caps" | translate}}</span>
-                        <span class="tags-input mr-1 mb-1">
-                            <span class="small-text">{{ "businessRules." + rule.contextType | translate}} :</span> 
-                            {{ "businessRules." + rule.contextCategory | translate }}
+                        <span class="tags-input mr-1 mb-1 contextCategory">
+                            <span class="small-text" >{{ "businessRules." + rule.contextType | translate}} :</span> 
+                            <span container="body" ngbTooltip='{{ "businessRules." + rule.contextCategory | translate }}'>{{ "businessRules." + rule.contextCategory | translate }}</span>
                         </span>
                     </div>                    
                     <div class="d-flex align-items-start mb-2">
@@ -138,8 +138,8 @@
                         </div>
                         <div class="d-flex align-items-start flex-wrap">
                             <ng-container *ngFor="let value of rule.value; let valueIndex = index">
-                                <span class="tags-input mr-1 mb-1" *ngIf="value && !checkIsArray(value)">{{value | dateFormatPipe: 'DD MMM YYYY'}}</span>
-                                <span class="tags-input mr-1 mb-1" *ngIf="value && value.length && checkIsArray(value)"><span *ngFor="let num of value; let numIndex = index">{{num | dateFormatPipe: 'DD MMM YYYY'}}<span *ngIf="!numIndex"> - </span></span></span>
+                                <span class="tags-input mr-1 mb-1" *ngIf="value && !checkIsArray(value)" container="body" ngbTooltip="{{value | dateFormatPipe: 'DD MMM YYYY'}}">{{value | dateFormatPipe: 'DD MMM YYYY'}}</span>
+                                <span class="tags-input mr-1 mb-1" *ngIf="value && value.length && checkIsArray(value)"><span *ngFor="let num of value; let numIndex = index" container="body" ngbTooltip="{{num | dateFormatPipe: 'DD MMM YYYY'}}">{{num | dateFormatPipe: 'DD MMM YYYY'}}<span *ngIf="!numIndex"> - </span></span></span>
                                 <span class="divider" *ngIf="valueIndex < rule.value.length - 1">{{ "or_caps" | translate}}</span>
                             </ng-container>
                         </div>
@@ -152,15 +152,15 @@
                         <span class="tags-input mr-1 mb-1"><span *ngIf=" outcome.outcomeType === 'boost' ||  outcome.outcomeType === 'lower'">{{ outcome.scale }}x</span>{{"businessRules.action" + outcome.outcomeType | translate}}Result
                         </span>
                     </div>
-                    <div class="d-flex align-items-start">
+                    <div class="d-inline-flex align-items-start">
                         <span class="outer-name mr-1 mb-1">{{"businessRules." + outcome.outcomeOperator | translate }}</span>
                         <span class="tags-input mr-1 mb-1">{{ outcome.fieldName }}:
-                            <span *ngFor="let value of outcome.outcomeValue;let valueIndex = index">{{ value }}
+                            <span *ngFor="let value of outcome.outcomeValue;let valueIndex = index"  container="body" ngbTooltip="{{value}}">{{ value }}
                                 <span *ngIf="valueIndex < outcome.outcomeValue.length - 1" class="divider mr-1 mb-1">{{ "or_caps" | translate }}</span>
                             </span>
                         </span>
                     </div>
-                    <img class="pl-1" *ngIf="outcome.showFieldWarning && outcome.showFieldWarning !== 'false'" src="assets/icons/info-blue.svg" [tooltipClass]="'whiteTooltip'" container="body" ngbTooltip="{{fieldWarnings[outcome.showFieldWarning] || outcome.showFieldWarning}}"
+                    <img class="pl-1 d-inline-flex" *ngIf="outcome.showFieldWarning && outcome.showFieldWarning !== 'false'" src="assets/icons/info-blue.svg" [tooltipClass]="'whiteTooltip'" container="body" ngbTooltip="{{fieldWarnings[outcome.showFieldWarning] || outcome.showFieldWarning}}"
                     />
                 </ng-container>
             </div>
