--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -522,7 +522,7 @@
                         align-items: center;
                         margin: 0 0 0px 0;
                         padding: 8px 0 8px 0;
-                        height: 60px;
+                        min-height: 60px;
                         box-shadow: inset 0px -1px 0px #E4E5E7;
                         .bot-name-data{
                             align-items: center;
