--- a/findly-builder/src/app/components/field-management/field-management.component.scss
+++ b/findly-builder/src/app/components/field-management/field-management.component.scss
@@ -219,18 +219,6 @@
 perfect-scrollbar .ps--active-y{
     padding-bottom: 85px;
 }
-
-.dropdown_overflow{
-    background: #FFFFFF;
-    box-shadow: 0px 10px 35px rgba(32, 33, 36, 0.2);
-    // box-shadow: 0px 5px 10px rgba(32, 33, 36, 0.3);
-
-    padding: 10px 0px;
-    border: 0;        
-    margin: 0px 0 0 0;
-    max-height: 300px;
-    overflow: auto;
-}
 .type_sort_dropdown{   
     .dropdown-open{                                
         .dropdown-input{
@@ -250,27 +238,45 @@ perfect-scrollbar .ps--active-y{
     }
 }
 
-::ng-deep .modal_popups_.fieldsAddModalPopup .modal-header {
-    height: 54px !important;
-    padding: 18px 30px !important;
-}
-::ng-deep .modal_popups_.fieldsAddModalPopup .modal-header .close_icon {
-    width: 21px !important;
-    height: 21px !important;
-    line-height: 18px !important;
-}
-::ng-deep .modal_popups_.fieldsAddModalPopup .modal-body {
-    padding: 10px 28px !important;
-}
-::ng-deep .fieldsAddModalPopup .modal-dialog .modal-content .modal-body .top_sec{
-    padding-bottom: 20px !important;
-    margin-bottom: 20px !important;
+::ng-deep.fieldsAddModalPopup {
+    .modal-header{
+        height: 54px !important;
+        padding: 18px 30px !important;
+        .close_icon{
+            width: 21px !important;
+            height: 21px !important;
+            line-height: 18px !important;
+        }
+    }    
+    .modal-body{
+        padding: 10px 28px !important;
+        .top_sec{
+            padding-bottom: 20px !important;
+            margin-bottom: 20px !important;
+        }
+        .dropdown_overflow{
+            background: #FFFFFF;
+            box-shadow: 0px 10px 35px rgba(32, 33, 36, 0.2);    
+            padding: 0px;
+            border: 0;        
+            margin: 0px 0 0 0;    
+            max-height: 150px;            
+            .scroll-search-field-{
+                max-height: 150px;
+                .scroll_{
+                    max-height: 150px;
+                }
+            }
+        }        
+    }
+    .modal-footer{
+        padding: 11px 30px !important;
+        height: 56px !important;
+    }
 }
 
-::ng-deep .fieldsAddModalPopup.modal_popups_ .modal-footer {
-    padding: 11px 30px !important;
-    height: 56px !important;
-}
+
+
 
 ::ng-deep .kr-modal{
     &.kr-center{
@@ -278,7 +284,7 @@ perfect-scrollbar .ps--active-y{
             &.fieldsAddModalPopup{
                 .modal-dialog{
                     max-width: 625px !important;
-                    height: 85% !important;
+                    height: 430px !important;
                     .modal-content{
                         border-radius: 8px !important;
                     }
