--- a/findly-builder/src/app/components/result-insights/result-insights.component.scss
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.scss
@@ -267,6 +267,22 @@
 
 ::ng-deep .modal_popups_{
     &.view-query-modal{
+        .table_header{
+            padding: 16px 15px;   
+            align-items: center;
+            box-shadow: inset 0px -1px 0px #E4E5E7;       
+            margin: 0 30px !important;          
+            .title{
+                padding: 0 5px;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 14px;
+                text-transform: capitalize;
+                color: #9AA0A6;
+                word-break: break-word;
+            }                    
+        }
         .modal-header{
             padding: 25px 30px 15px 30px;
             position: relative;
