--- a/findly-builder/src/app/components/search-insights/search-insights.component.scss
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.scss
@@ -216,7 +216,7 @@
             }
         }
         .title {
-            padding: 0 5px;
+            padding: 0 5px 0 16px;
             font-style: normal;
             font-size: 14px;
             line-height: 14px;
@@ -256,6 +256,21 @@
 
 ::ng-deep .modal_popups_ {
     &.view-query-modal {
+        .table_header {
+            padding: 16px 15px;
+            align-items: center;
+            box-shadow: inset 0px -1px 0px #E4E5E7;
+            margin: 0 30px !important;
+            .title {
+                padding: 0 5px;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 14px;
+                text-transform: capitalize;
+                color: #9AA0A6;
+            }
+        }
         .modal-header {
             padding: 25px 30px 15px 30px;
             position: relative;
