Drag and drop icon can be moved towards value field and change in the design of workbench issue fixed

--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -214,7 +214,7 @@
                   
                 </div>
                 <div class="drag_drop">
-                  <img src="assets/icons/drog_drop.svg" />
+                  <img src="assets/icons/drag_drop_move_icon.svg" />
                 </div>
                 <div class="kr-sg-dropdowns col-4 input-box">
                   <div class="label-text">Action</div>
@@ -452,8 +452,8 @@
                 <div *cdkDragPreview class="drag_drop">
                 
                 </div>
-                <div class="drag_drop  pl-3">
-                  <img src="assets/icons/drog_drop.svg" />
+                <div class="drag_drop">
+                  <img src="assets/icons/drag_drop_move_icon.svg" />
                 </div>
                 <div class="kr-sg-input-text col-4 input-box">
                   <div class="label-text">Source Field</div>
