--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -39,10 +39,28 @@
                 <div class="search-widget">
                     <div class="label-text">Search Box Customization</div>
                     <div class="d-flex search-customization-input">
-                        <div class="kr-sg-input-search" [ngClass]="{'added-tour':tourGuide==='step1'||tourGuide==='step2'||tourGuide==='step3'}">                               
-                            <input type="text" class="input-search" [ngClass]="{'activeBox':selectSearch=='inputBox'}" [ngStyle]="{'background':searchObject.searchWidgetConfig.searchBarFillColor,'border-color':searchObject.searchWidgetConfig.searchBarBorderColor}" (click)="selectSearchBox('inputBox');$event.stopPropagation();closeAllBoxs('all');" readonly>
-                            <img [src]="searchIcon" class="search-icon" [ngClass]="{'activeBox':selectSearch=='inputIcon'}" (click)="selectSearchBox('inputIcon');$event.stopPropagation();" height="15" width="15">
-                            <input #elasticInput class="placeholder-custom-search" value="{{searchObject.searchWidgetConfig.searchBarPlaceholderText}}" placeholder="search" (click)="selectSearchBox('placeholderText');$event.stopPropagation();closeAllBoxs('all');" [ngClass]="{'activeBox':selectSearch=='placeholderText'}" [ngStyle]="{'color':searchObject.searchWidgetConfig.searchBarPlaceholderTextColor,'width.px': width,'background':'none'}" #data (change)="onEventLog('placeholderText',data.value);" (input)="resize()"> 
+                        <div class="kr-sg-input-search" [ngClass]="{'added-tour':tourGuide==='step1'||tourGuide==='step2'||tourGuide==='step3'}">                                                         
+                            <div class="hover-search-icon">
+                                <div class="hover-action-edit-icon-search" (click)="selectSearchBox('inputBox');$event.stopPropagation();closeAllBoxs('all');">
+                                    <img src="assets/icons/border-pencil.svg">
+                                </div>  
+                                <input type="text" [ngClass]="{'activeBox':selectSearch=='inputBox'}"  class="input-search" [ngStyle]="{'background':searchObject.searchWidgetConfig.searchBarFillColor,'border-color':searchObject.searchWidgetConfig.searchBarBorderColor}" readonly>
+                            </div>
+
+                            <div class="search-icon-hover-widget">
+                                <div class="hover-action-edit-icon-search" (click)="selectSearchBox('inputIcon');$event.stopPropagation();">
+                                    <img src="assets/icons/border-pencil.svg">
+                                </div> 
+                                <img [src]="searchIcon" class="search-icon" [ngClass]="{'activeBox':selectSearch=='inputIcon'}" height="15" width="15">
+                            </div>
+                            <div class="place-holder-widget">
+                                <div class="hover-action-edit-icon-search" (click)="selectSearchBox('placeholderText');$event.stopPropagation();closeAllBoxs('all');">
+                                    <img src="assets/icons/border-pencil.svg">
+                                </div> 
+                                <input #elasticInput class="placeholder-custom-search" value="{{searchObject.searchWidgetConfig.searchBarPlaceholderText}}" placeholder="search" [ngClass]="{'activeBox':selectSearch=='placeholderText'}" [ngStyle]="{'color':searchObject.searchWidgetConfig.searchBarPlaceholderTextColor,'width.px': width,'background':'none'}" #data (change)="onEventLog('placeholderText',data.value);" (input)="resize()"> 
+                            </div>                            
+
+
                             <span #hiddenText style="visibility: hidden; white-space: pre;">{{elasticInput.value}}</span>
                             <button class="btn-customize kr-sg-button-primary read-mode btn_lg inside-input-btn"  (click)="selectSearchBox('button');closeAllBoxs('all');" [ngClass]="{'activeBox':selectSearch=='button','added-tour':tourGuide==='step4'}" [ngStyle]="{'background':searchObject.searchWidgetConfig.buttonFillColor,'border-color':searchObject.searchWidgetConfig.buttonBorderColor,'color':searchObject.searchWidgetConfig.buttonTextColor}" [disabled]="buttonDisabled" *ngIf="(searchObject.searchExperienceConfig.searchBarPosition==='top'&&searchObject.searchWidgetConfig.buttonPlacementPosition==='inside')||searchObject.searchExperienceConfig.searchBarPosition==='bottom'">
                                 <span>{{searchObject.searchWidgetConfig.buttonText}}</span>
@@ -181,7 +199,7 @@
                             <div class="input-file">
                                 <div class="title">Drag and drop or <span class="browse">browse</span></div>
                                 <input type="file" name="avatar"  (change)="selectIcon($event,'searchIcon','auto')"/>
-                                <span class="icon-text"><img src="assets/icons/info.svg"> Recommended icon size : 26X26 pixels</span>
+                                <span class="icon-text d-flex align-items-center"><img src="assets/icons/info.svg" class="mr-2"> Recommended icon size : 26X26 pixels</span>
                             </div>
                         </div>
                         <div class="fill-colors-block" *ngSwitchCase="'placeholderText'">
