--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -233,49 +233,113 @@
                     }
                     .kr-sg-input-search{
                         width: 700px;
-                        margin-right: 15px;
+                        margin-right: 15px;                        
                         .inside-input-btn{
                             position: absolute;
                             top: 3px;
                             right: 4px;
                             height: 28px;
                         }
-                        .placeholder-custom-search{
-                            position: absolute;                         
-                            width: 200px;                            
-                            max-width: initial;                           
-                            height: 20px;
-                            top: 7px;
-                            border-radius: 0;
-                            left: 38px;
-                            padding: 0;
-                            background: #fff;
-                            border: 1px solid transparent;
-                            outline: 0 !important;
-                            max-width: calc(100% - 55px);
-                            &:hover{
-                                border: 1px solid #0D6EFD;
-                                background: #E7F1FF;
-                            }
-                            &.activeBox{
-                                border: 1px solid #0D6EFD;
-                                background: #E7F1FF;
-                            }
-                        }
+                        
                         &.added-tour{
                             z-index: 1;
                             pointer-events: none;
                         }
-                        .input-search{
-                            padding: 0 15px 0 36px;
-                            &:hover{
-                                border: 1px solid #0D6EFD;
-                                background: #E7F1FF;
+                        .hover-search-icon{                            
+                            .hover-action-edit-icon-search{
+                                position: absolute;
+                                right: 0;
+                                top: -22px;
+                                display: none;
+                                cursor: pointer;
+                                padding-bottom: 10px;
                             }
-                            &::placeholder{
-                                color: #BDC1C6 !important;
-                            }                            
+                            &:hover{
+                                .hover-action-edit-icon-search{
+                                    display: block;
+                                }
+                                .input-search{
+                                    border: 1px solid #0D6EFD !important;
+                                    background: #E7F1FF !important;
+                                }
+                            }
+                            .input-search{
+                                padding: 0 15px 0 36px;                                
+                                &::placeholder{
+                                    color: #BDC1C6 !important;
+                                }     
+                                &.activeBox{
+                                    border: 1px solid #0D6EFD !important;
+                                    background: #E7F1FF !important;                                                       
+                                }                       
+                            }
+                        }    
+                        
+                        .search-icon-hover-widget{
+                            position: absolute;
+                            left: 9px;
+                            top: 7px;                            
+                            &:hover{
+                                .hover-action-edit-icon-search{
+                                    display: block;
+                                }
+                                .search-icon{                                                              
+                                    border: 1px solid #0D6EFD;
+                                    background: #E7F1FF;                                
+                                }
+                            }
+                            .hover-action-edit-icon-search{
+                                position: absolute;
+                                left: 16px;                                
+                                z-index: 1;
+                                cursor: pointer;
+                                display: none;
+                                padding-left: 5px;
+                            }
+                            .search-icon{
+                                position: relative;
+                                top: 0;
+                                left: 0;
+                            }
                         }
+
+                        .place-holder-widget{
+                            position: absolute;
+                            top: 7px;
+                            left: 40px;
+                            .hover-action-edit-icon-search{
+                                position: absolute;
+                                right: 36px;
+                                top: 0;
+                                display: none;
+                                cursor: pointer;
+                            }
+                            .placeholder-custom-search{                                                    
+                                width: 200px;                            
+                                max-width: initial;                           
+                                height: 20px;                                
+                                border-radius: 0;                                
+                                padding: 0;
+                                background: #fff;
+                                border: 1px solid transparent;
+                                outline: 0 !important;
+                                max-width: calc(100% - 55px);                                
+                                &.activeBox{
+                                    border: 1px solid #0D6EFD;
+                                    background: #E7F1FF;
+                                }
+                            }    
+                            &:hover{
+                                .hover-action-edit-icon-search{
+                                    display: block;
+                                }
+                                .placeholder-custom-search{
+                                    border: 1px solid #0D6EFD !important;
+                                    background: #E7F1FF !important;
+                                }                              
+                            }                       
+                        }
+
                         .placeholder-text{
                             position: absolute;
                             left: 37px;
@@ -285,16 +349,7 @@
                                 border: 1px solid #0D6EFD;
                                 background: #E7F1FF;
                             }
-                        }
-                        .search-icon{
-                            left: 9px;
-                            top: 9px;
-                            border: 1px solid transparent;
-                            &:hover{
-                                border: 1px solid #0D6EFD;
-                                background: #E7F1FF;
-                            }
-                        }
+                        }                                           
                         ::placeholder{
                             &:hover{
                                 border: 1px solid #0D6EFD;
@@ -416,8 +471,7 @@
                             font-size: 12px;
                             line-height: 18px;
                             color:#07377F;
-                            margin-left: -8px;
-                            margin-right: -10px;
+                            width: 450px;                          
                         }
                         .title{
                             position: absolute;
