facet and index drap and drop icon changed

--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -166,7 +166,7 @@
                                 <div class="title text-truncate"></div>
                               </div>
                             <div class="col-4 content withcheckbox">
-                                <div class="drag_drop_icon pl-2"><img src="assets/icons/drog_drop.svg"></div>
+                                <div class="drag_drop_icon pl-2"><img src="assets/icons/drag_drop_move_icon.svg"></div>
                                 <div class="kr-sg-checkbox p-0 m-0 adjust-checkbox-padding">
                                     <input id="{{facet._id}}" class="checkbox-custom selectEachfacetInput" (change)="checkUncheckfacets(facet)" type="checkbox">
                                     <label for="{{facet._id}}" class="checkbox-custom-label"></label>
