--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -40,7 +40,7 @@
           <div *ngIf="showNewStageType">
             <div class="field_data active cdk-drag"  >
               <div class="drag_drop_icon">
-                <img src="assets/icons/drog_drop.svg" />
+                <img src="assets/icons/drag_drop_move_icon.svg" />
               </div>
               <div class="stateIcon" >
                 <img src="assets/images/activeStage.svg" />
@@ -71,7 +71,7 @@
                 <div class="title text-truncate"></div>
               </div>
               <div class="drag_drop_icon">
-                <img src="assets/icons/drog_drop.svg" />
+                <img src="assets/icons/drag_drop_move_icon.svg" />
               </div>
               <div class="stateIcon" *ngIf="pipe?.enable">
                 <img src="assets/images/activeStage.svg" />
