--- a/findly-builder/src/app/components/settings/settings.component.html
+++ b/findly-builder/src/app/components/settings/settings.component.html
@@ -143,7 +143,7 @@
                     </div>
                 </div> -->
                 <div class="kr-sg-dropdowns jwt-signing-alg-dropdown" ngbDropdown [placement]="'bottom'">    
-                    <div class="label-text mb-1"> {{"settings.jwt_algorithm" | translate}} </div>                                    
+                    <div class="label-text 2"> {{"settings.jwt_algorithm" | translate}} </div>                                    
                     <div class="dropdown dropdown-open">
                         <button class="dropdown-toggle dropdown-input" >{{ credntial.awt }}</button>                                            
                         <ul class="dropdown-menu content-menu faq-filter-add mw-100 w-100 p-0" ngbDropdownMenu>
@@ -296,7 +296,7 @@
         <hr>
         
         <div class="kr-sg-dropdowns">
-            <div class="label-text mb-1">{{"settings.jwt_algorithm" | translate}} </div>
+            <div class="label-text mb-2">{{"settings.jwt_algorithm" | translate}} </div>
             <div class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom'">                                        
                 <div class="dropdown dropdown-open">
                     <button class="dropdown-toggle dropdown-input" >{{credntial.awt}}</button>                                            
