--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1949,13 +1949,24 @@ body.top-down .top-down-search-background-div .top-down-wrapper{
 }
 
 .close-top-down-search{
-  position: fixed;
+  /* position: fixed;
   right: 60px;
   top: 104px;
   z-index: 99998;
-  cursor: pointer;
+  cursor: pointer; */
 }
 
+.close-top-down-search-outer{
+  position: fixed;
+    right: 60px;
+    top: 91px;
+    z-index: 99998;
+    padding: 7px 12px;
+    cursor: pointer;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px rgb(0 0 0 / 25%);
+    border-radius: 50%;
+}
 .top-down-search-background-div .topdown-search-main-container .search-input-box .search-box-container-data .search-icon{
   top: -26px;
 }
@@ -2303,9 +2314,9 @@ display: none !important;
 
 
 .show_insights_top_down{
-  position: fixed;
-  top: 99px;
-  right: 32px;
+  position: absolute;
+  top: 28px;
+  right: 190px;
   display: none;
   cursor: pointer;
 }
